--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,6 @@
                             <a href="#" class="catalog-item__back">назад</a>
                         </ul>
                     </div>
-
             <!-- <div class="catalog__content">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
@@ -174,3 +173,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+Test
