--- a/src/index.html
+++ b/src/index.html
@@ -489,6 +489,19 @@
         </div>
     </section>
 
+    <footer class="footer">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430481201486!2d37.6448019512869!3d55.768394980462105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1665064080253!5m2!1sru!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="footer__info">
+                <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+                <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+                <div class="footer__social">
+                    <a href="#" class="footer__social-item"><img src="icons/facebook.png" alt="facebook"></a>
+                    <a href="#" class="footer__social-item"><img src="icons/instagram.png" alt="instagram"></a>
+                    <a href="#" class="footer__social-item"><img src="icons/pinterest.png" alt="pinterest"></a>
+                </div>
+            </div>
+    </footer>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
     <script src="js/slick.min.js"></script>
